MB-19124: Disconnect existing connection of the same name

If a DCP connection request has the same name as an
existing connections, mark the existing connection
as "doDisconnect" before creating the new connection.
ns_server relies on this behaviour.

Change-Id: I008253ad9247a56db21baaaccce9f24df5ff7711
Reviewed-on: http://review.couchbase.org/62644
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Chiyoung Seo <chiyoung@couchbase.com>